Changed particle effect to be updated in CPU.

--- a/DemoRebooted/DemoRebooted.csproj
+++ b/DemoRebooted/DemoRebooted.csproj
@@ -94,7 +94,15 @@
     <None Include="packages.config" />
     <EmbeddedResource Include="Resources\oldtv.obj" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\FireSprites.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\FireSprites2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\FireSpritesPalette.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
